--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+    background-color:black; 
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+    color:gray; 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+}
+
+.maindiv{
+    background-color: white;
+    font: black;
+    width: 300px;
+    padding: 20px;
+    border-radius: 25px;
+    align-items: center;
+}
+
+.button1{
+    border-radius: 4px;
+}
+
+
+
 
 
